--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.6",
-    "@mui/material": "^5.14.6",
+    "@mui/icons-material": "^5.14.8",
+    "@mui/material": "^5.14.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,12 +16,13 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
     "formik": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "node-sass": "^9.0.0",
     "prism-react-renderer": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
     "react-scripts": "^2.1.3",
+    "react-toastify": "^9.1.3",
     "typescript": "^4.9.5",
     "update": "^0.7.4",
     "web-vitals": "^2.1.4",
@@ -50,5 +51,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/react-toastify": "^4.1.0",
+    "react-router-dom": "^6.15.0"
   }
 }
