--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.8",
-    "@mui/material": "^5.14.8",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.11",
+    "@mui/styled-engine-sc": "^5.14.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,7 +15,7 @@
     "@types/node": "^16.18.45",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "axios": "^1.4.0",
+    "axios": "^1.5.0",
     "formik": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "node-sass": "^9.0.0",
@@ -23,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^2.1.3",
     "react-toastify": "^9.1.3",
+    "styled-components": "^5.3.11",
     "typescript": "^4.9.5",
     "update": "^0.7.4",
     "web-vitals": "^2.1.4",
@@ -54,6 +56,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-toastify": "^4.1.0",
     "react-router-dom": "^6.15.0"
   }
