--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.11",
-    "@mui/material": "^5.14.11",
-    "@mui/styled-engine-sc": "^5.14.11",
+    "@mui/icons-material": "^5.14.8",
+    "@mui/material": "^5.14.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,16 +14,17 @@
     "@types/node": "^16.18.45",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "axios": "^1.5.0",
+    "@types/react-modal": "^3.16.0",
+    "axios": "^1.4.0",
     "formik": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "node-sass": "^9.0.0",
     "prism-react-renderer": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-scripts": "^2.1.3",
     "react-toastify": "^9.1.3",
-    "styled-components": "^5.3.11",
     "typescript": "^4.9.5",
     "update": "^0.7.4",
     "web-vitals": "^2.1.4",
@@ -56,7 +56,6 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/react-router-dom": "^5.3.3",
     "@types/react-toastify": "^4.1.0",
     "react-router-dom": "^6.15.0"
   }
