--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-modal": "^3.16.1",
     "react-scripts": "^2.1.3",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
     "typescript": "^4.9.5",
     "update": "^0.7.4",
     "web-vitals": "^2.1.4",
